Muudatus veebipõhises IDE-s

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="card">
         <h1>Minu S3 Veebileht</h1>
         <p>See leht liigub GitHubist otse Amazon S3 serverisse!</p>
+        <h2>See muudatus tehti GitHub Dev IDE-s!</h2>
     </div>
 </body>
 </html>
