--- a/index.html
+++ b/index.html
@@ -3,51 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vibe Veebileht</title>
+    <title>Vibe Mullimäng</title>
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            overflow: hidden; /* Et mullid ekraanilt välja ei läheks */
+            font-family: 'Segoe UI', sans-serif;
+            background: linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); /* Lahe värviüleminek */
             color: white;
         }
+
+        #score-board {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            font-size: 2rem;
+            background: rgba(255, 255, 255, 0.2);
+            padding: 10px 20px;
+            border-radius: 15px;
+            backdrop-filter: blur(5px);
+            z-index: 10;
+        }
+
+        .bubble {
+            position: absolute;
+            border-radius: 50%;
+            cursor: pointer;
+            transition: transform 0.1s;
+            box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5);
+            animation: move linear infinite;
+        }
+
+        .bubble:active {
+            transform: scale(0.5);
+        }
+
+        @keyframes move {
+            from { transform: translateY(100vh); }
+            to { transform: translateY(-100px); }
+        }
+
         .card {
             background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px); /* Klaasi efekt */
+            backdrop-filter: blur(10px);
             padding: 2rem;
             border-radius: 20px;
-            box-shadow: 0 8px 32px rgba(0,0,0,0.3);
             text-align: center;
             border: 1px solid rgba(255,255,255,0.2);
-            max-width: 400px;
-        }
-        button {
-            background: #ff4b2b;
-            background: linear-gradient(to right, #ff416c, #ff4b2b);
-            border: none;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 50px;
-            cursor: pointer;
-            font-size: 1rem;
-            margin-top: 20px;
-            transition: transform 0.2s;
-        }
-        button:hover {
-            transform: scale(1.05);
+            z-index: 5;
+            pointer-events: none; /* Et mullid saaks kasti taga ka vajutada */
         }
     </style>
 </head>
 <body>
+
+    <div id="score-board">Punktid: <span id="score">0</span></div>
+
     <div class="card">
-        <h1>Vibe Check ✅</h1>
-        <p>See leht deploiti automaatselt <strong>GitHub Actions</strong> abil otse <strong>AWS S3</strong>-sse.</p>
-        <p>Muudatus tehtud GitHub Dev (VS Code) IDE-s.</p>
-        <button onclick="alert('Automaatika töötab!')">Vajuta siia</button>
+        <h1>Mullimäng 🫧</h1>
+        <p>Püüdke mullid kinni! See mäng jookseb AWS S3 serveris.</p>
     </div>
+
+    <script>
+        let score = 0;
+        const scoreElement = document.getElementById('score');
+
+        function createBubble() {
+            const bubble = document.createElement('div');
+            bubble.classList.add('bubble');
+
+            // Juhuslik suurus ja asukoht
+            const size = Math.random() * 60 + 20 + 'px';
+            bubble.style.width = size;
+            bubble.style.height = size;
+            bubble.style.left = Math.random() * 100 + 'vw';
+            
+            // Juhuslik värv
+            const colors = ['#FF416C', '#FF4B2B', '#1fa2ff', '#12d8fa', '#a6ffcb', '#fdbb2d'];
+            bubble.style.background = colors[Math.floor(Math.random() * colors.length)];
+            bubble.style.opacity = '0.6';
+
+            // Juhuslik kiirus
+            const duration = Math.random() * 3 + 2 + 's';
+            bubble.style.animationDuration = duration;
+
+            // Vajutamise funktsioon
+            bubble.onclick = () => {
+                score++;
+                scoreElement.innerText = score;
+                bubble.remove(); // Mull kaob vajutamisel
+            };
+
+            document.body.appendChild(bubble);
+
+            // Eemalda mull, kui see ekraanilt välja jõuab
+            setTimeout(() => {
+                if (bubble.parentElement) bubble.remove();
+            }, 5000);
+        }
+
+        // Tekita uus mull iga 500ms järel
+        setInterval(createBubble, 500);
+    </script>
 </body>
 </html>
