--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lõpuks Õige DVD Vibe</title>
+    <title>Vibe Veebileht</title>
     <style>
         body {
-            font-family: 'Segoe UI', sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -17,12 +17,12 @@
             overflow: hidden;
         }
 
-        /* See on meie DVD logo seadistus */
+        /* Õige ja puhas DVD logo */
         #dvd-logo {
             position: absolute;
-            width: 200px; /* Suurus, mis tundub õige */
+            width: 200px;
+            height: auto;
             z-index: 1;
-            /* Filter muudab algse musta logo valgeks */
             filter: brightness(0) invert(1);
         }
 
@@ -35,7 +35,18 @@
             text-align: center;
             border: 1px solid rgba(255,255,255,0.3);
             max-width: 450px;
-            z-index: 10;
+            z-index: 10; /* Hoiab teksti logo ees */
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 1.1rem;
+            line-height: 1.6;
+            opacity: 0.9;
         }
 
         button {
@@ -45,8 +56,18 @@
             padding: 12px 30px;
             border-radius: 50px;
             cursor: pointer;
+            font-size: 1rem;
             font-weight: bold;
             margin-top: 25px;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+        }
+
+        button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 6px 20px rgba(0,0,0,0.3);
+            background: #fdbb2d;
+            color: white;
         }
     </style>
 </head>
@@ -55,9 +76,10 @@
     <img id="dvd-logo" src="https://upload.wikimedia.org/wikipedia/commons/9/9b/DVD_logo.svg" alt="DVD Video">
 
     <div class="card">
-        <h1>DVD Vibe ✅</h1>
-        <p>See on nüüd see **päris** logo, mis ekraanil põrkab.</p>
-        <button onclick="alert('Nüüd on logo õige!')">Vibe Check</button>
+        <h1>Vibe Check ✅</h1>
+        <p>See leht deploiti automaatselt <strong>GitHub Actions</strong> abil otse <strong>AWS S3</strong>-sse.</p>
+        <p>Arendatud professionaalses <strong>VS Code</strong> keskkonnas.</p>
+        <button onclick="alert('Automaatika töötab suurepäraselt!')">Vajuta siia</button>
     </div>
 
     <script>
@@ -71,7 +93,6 @@
             x += xSpeed;
             y += ySpeed;
 
-            // Kontrollime ekraani servasid
             if (x + 200 >= window.innerWidth || x <= 0) {
                 xSpeed *= -1;
                 changeColor();
@@ -86,7 +107,6 @@
             requestAnimationFrame(update);
         }
 
-        // Muudame logo värvi läbi CSS filtrite iga põrkega
         function changeColor() {
             const hue = Math.floor(Math.random() * 360);
             logo.style.filter = `brightness(0) invert(1) sepia(1) saturate(10000%) hue-rotate(${hue}deg)`;
